# psplpy

./: .gitignore  License  README.md  pyproject.toml  requirements.txt
psplpy/: __init__.py  _test.py  auto_wechat.py  autogui_util.py  command_wrapper.py  data_access.py  data_process.py  django_shortcut.py  django_util.py  dllmain.cpp  file_util.py  gui_util.py  image_util.py  interact_util.py  linux.py  network_util.py  ocr_util.py  other.py  other_util.py  pdf_util.py  random_data.py  time_it.py  time_util.py  timing.py  webp.py
psplpy/data/: time_it_template.txt
psplpy/data/django/: urls.py
psplpy/data/django/management/commands/: populateusers.py
psplpy/data/django/templates/: profile.html
psplpy/data/django/templates/registration/: login.html  password_reset_form.html
psplpy/scripts/: auto_wechat.py  count_lines_of_code.py  deprecated.rar  fake_data.py  generate_random_java_code.py  linux.py  my_notepad.py  upload_pypi_project.py
tests/: test.py
