[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "psplpy"
version = "0.1.1"
authors = []
description = "The Personal Study Purposes Library of PYthon."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ddddocr==1.4.7",
    "easyocr==1.7.0",
    "paddleocr==2.6.1.3",

    "opencv-python==4.8.0.74",
    "numpy==1.24.4",
    "Pillow==9.5.0",
    "PyAutoGUI==0.9.54",
    "pynput==1.7.6",
]