[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "psplpy"
version = "0.1.3"
authors = []
description = "The Personal Study Purposes Library of PYthon."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ddddocr",
    "easyocr",
    "paddleocr",
    "numpy==1.24.4",
    "Pillow==9.5.0",
    "PyAutoGUI==0.9.54",
    "pynput==1.7.6",
]