[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "psplpy"
version = "0.13.0"
authors = []
description = "The Personal Study Purposes Library of PYthon."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]